--- a/_notebooks/2020-11-21-Finding-eigenvalues-and-eigenvectors-of-stock-returns-correlation-matrix.ipynb
+++ b/_notebooks/2020-11-21-Finding-eigenvalues-and-eigenvectors-of-stock-returns-correlation-matrix.ipynb
@@ -220,7 +220,7 @@
     "letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
     "tickers = [''.join(x) for x in np.random.choice(list(letters), size=(num_stocks,3))]\n",
     "\n",
-    "dates = pd.date_range('1969-04-20', periods=num_timesteps, freq='D')\n",
+    "dates = pd.date_range('2020-11-201', periods=num_timesteps, freq='D')\n",
     "\n",
     "data = np.vstack([brownian_motion(mean, std, num_timesteps) for mean, std in zip(np.random.randint(50,200,num_stocks), np.random.randint(2,5, num_stocks))]).T\n",
     "\n",
@@ -236,7 +236,7 @@
     "id": "CeibkfOthMq-"
    },
    "source": [
-    "> Top: Use this to load csv's from your own google drive"
+    "> Tip: Use this to load csv's from your own google drive"
    ]
   },
   {
