--- a/_notebooks/2020-11-21-Finding-eigenvalues-and-eigenvectors-of-stock-returns-correlation-matrix.ipynb
+++ b/_notebooks/2020-11-21-Finding-eigenvalues-and-eigenvectors-of-stock-returns-correlation-matrix.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Eigen-Vectors & Eigen-Values of Stock Returns Correlations\n",
     "\n",
-    "> Back in undergrad, John Rundle (https://geology.ucdavis.edu/people/faculty/rundle) taught a \"Econo-Physics\" class where we learned about portfolio managment using the eigen-vectors & eigen-values correlation matrix of stock returns. Here we create some fake data and make that caluation using numpy and pandas while visualizing using matplotlib and seaborn.\n",
+    "> Back in undergrad, [John Rundle](https://geology.ucdavis.edu/people/faculty/rundle) taught a graduate \"Econo-Physics\" class where in one lesson we learned about portfolio managment using the eigen-vectors & eigen-values correlation matrix of stock returns. Here we create some fake data and make that caluation using numpy and pandas while visualizing using matplotlib and seaborn.\n",
     "\n",
     "- toc:true\n",
     "- badges: true\n",
     "- comments: true\n",
     "- image: images/eigen_correlation_heatmap.png\n",
-    "- author: Nick\n",
+    "- author: nickvazz\n",
     "- categories: [stock, trading, eigenvalues, eigenvectors, kavoos]"
    ]
   },
@@ -220,7 +220,7 @@
     "letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
     "tickers = [''.join(x) for x in np.random.choice(list(letters), size=(num_stocks,3))]\n",
     "\n",
-    "dates = pd.date_range('2020-11-201', periods=num_timesteps, freq='D')\n",
+    "dates = pd.date_range('2020-11-21', periods=num_timesteps, freq='D')\n",
     "\n",
     "data = np.vstack([brownian_motion(mean, std, num_timesteps) for mean, std in zip(np.random.randint(50,200,num_stocks), np.random.randint(2,5, num_stocks))]).T\n",
     "\n",
